[package]
name = "rtodo"
version = "0.1.4"
edition = "2021"
description = "A simple to-do list manager"
keywords = ["todo","manager","to-do-list"]
readme = "README.md"
license = "MIT"
authors = ["Tiago Correia <tiagorcorreia87@gmail.com"]
repository = "https://github.com/TiagoRCorreia/rtodo"
categories = ["command-line-utilities"]

[dependencies]
colored = "2.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
directories = "4.0"
ctrlc = "3.2"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1.6"
thiserror = "1.0.38"
anyhow = "1.0.68"
